@@ -167,7 +167,7 @@ ecc_mul_a_eh (const struct ecc_curve *ecc,
 
       bits &= TABLE_MASK;
       sec_tabselect (tp, 3*ecc->p.size, table, TABLE_SIZE, bits);
-      ecc->add_hhh (ecc, r, tp, r, scratch_out);
+      ecc->add_hhh (ecc, r, r, tp, scratch_out);
     }
 #undef table
 #undef tp
